admission/ValidatingAdmissionPolicy/policies/seccomp-profile-restricted/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seccomp-profile-restricted-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "ae109ba1-7514-400c-bf0c-8f854a867722"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test seccomp-profile-restricted-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/seccomp-profile-restricted/ephemeralcontainers/deny-kubectl-debug-custom.yaml
